--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nodejs-hw-mongodb",
+  "name": "energy-monitoring",
   "version": "1.0.0",
   "description": "",
   "type": "module",
@@ -8,7 +8,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
     "start": "node ./src/index.js"
-
   },
   "keywords": [],
   "author": "Yuliia Diachenko <zirkanew82@gmail.com>",
@@ -24,8 +23,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
-    "pino-http": "^10.2.0"
+    "pino-http": "^10.2.0",
+    "xlsx": "^0.18.5"
   }
 }
