--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js",
-    "start": "node ./src/index.js"
+    "start": "node ./src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "Yuliia Diachenko <zirkanew82@gmail.com>",
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.6.0",
+    "@redocly/cli": "^1.25.10",
     "eslint": "^9.6.0",
     "globals": "^15.8.0",
     "nodemon": "^3.1.4",
