--- a/package.json
+++ b/package.json
@@ -17,24 +17,26 @@
   "license": "ISC",
   "devDependencies": {
     "@eslint/js": "^9.6.0",
-    "@redocly/cli": "^1.25.10",
+    "@redocly/cli": "^1.25.11",
     "eslint": "^9.6.0",
     "globals": "^15.8.0",
     "nodemon": "^3.1.4",
     "pino-pretty": "^11.2.1"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "joi": "^17.13.3",
-    "mongodb": "^6.8.0",
+    "mongodb": "^6.10.0",
     "mongoose": "^8.5.1",
     "pino-http": "^10.2.0",
-    "xlsx": "^0.18.5"
+    "swagger-ui-express": "^5.0.1"
   }
 }
