--- a/src/swagger/paths/green/post.yaml
+++ b/src/swagger/paths/green/post.yaml
@@ -1,5 +1,5 @@
 tags:
-  - Greens
+  - Green
 summary: Create Green plant
 operationId: createGreenPlant
 description: 'Create a Green plant with payload'
