--- a/src/swagger/paths/green/{id}/get.yaml
+++ b/src/swagger/paths/green/{id}/get.yaml
@@ -1,8 +1,8 @@
 tags:
-  - Thermals
-summary: Get thermal plant by id
-operationId: getThermal Plant
-description: 'Get thermal  plant by id'
+  - Green plant
+summary: Get green plant by id
+operationId: getGreenPlant
+description: 'Get green plant by id'
 security:
   - bearerAuth: []
 parameters:
@@ -14,7 +14,7 @@ parameters:
       example: '65ca67e7ae7f10c88b598384'
 responses:
   '200':
-    description: 'Get thermal  plant by id'
+    description: 'Get green plant by id'
     content:
       application/json:
         schema:
@@ -29,9 +29,9 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully found thermal plant with id 65ca67e7ae7f10c88b598384!
+              example: Successfully found green plant with id 65ca67e7ae7f10c88b598384!
             data:
               type: object
-              $ref: '../../../components/schemas/thermalPlant.yaml'
+              $ref: '../../../components/schemas/greenPlant.yaml'
   '401':
     $ref: '../../../components/responses/401.yaml'
