--- a/src/swagger/paths/thermal/get.yaml
+++ b/src/swagger/paths/thermal/get.yaml
@@ -1,5 +1,5 @@
 tags:
-  - Thermals
+  - Thermal
 summary: Get list of Thermal plants
 operationId: getGreen
 description: 'Get list of users with this endpoint'
