--- a/src/swagger/paths/thermal/post.yaml
+++ b/src/swagger/paths/thermal/post.yaml
@@ -1,5 +1,5 @@
 tags:
-  - Thermals
+  - Thermal
 summary: Create Thermal plant
 operationId: createThermalPlant
 description: 'Create a Thermal plant with payload'
