--- a/src/swagger/components/schemas/greenPlant.yaml
+++ b/src/swagger/components/schemas/greenPlant.yaml
@@ -30,7 +30,7 @@ properties:
     type: number
     example: 9.7
   PowerPlantType:
-    description: 'Green plant's type power'
+    description: 'Green plant`s type power'
     type: string
     enum: ["Biomass", "Biogas", "Solar", "Wind", "Hydro"]
   GeneratedElectricityAmount:
