--- a/src/swagger/paths/thermal/post.yaml
+++ b/src/swagger/paths/thermal/post.yaml
@@ -31,7 +31,7 @@ requestBody:
             type: number
             example: 2018
           PowerPlantType:
-            description: 'Thermal plant's type power'
+            description: 'Thermal plant`s type power'
             type: string
             enum: [
                 "heat power plants",
