--- a/src/swagger/paths/thermal/{id}/get.yaml
+++ b/src/swagger/paths/thermal/{id}/get.yaml
@@ -1,7 +1,7 @@
 tags:
-  - Thermal plant
+  - Thermal
 summary: Get thermal plant by id
-operationId: getThermal Plant
+operationId: getThermalPlant
 description: 'Get thermal  plant by id'
 security:
   - bearerAuth: []
@@ -14,7 +14,7 @@ parameters:
       example: '65ca67e7ae7f10c88b598384'
 responses:
   '200':
-    description: 'Get thermal  plant by id'
+    description: 'Get thermal plant by id'
     content:
       application/json:
         schema:
